Paginas temáticas añadidas

--- a/cultura.html
+++ b/cultura.html
@@ -9,8 +9,8 @@
       <h1>Avilés</h1>
       <nav>
         <ul>
-          <a>Novedades</a>
-          <a href="cultura.html">Cultura</a>
+          <a href="index.html">Novedades</a>
+          <a>Cultura</a>
           <a href="historia.html">Historia</a>
           <a href="deporte.html">Deporte</a>
           <a href="turismo.html">Turismo</a>
