--- a/turismo.html
+++ b/turismo.html
@@ -9,11 +9,11 @@
       <h1>Avilés</h1>
       <nav>
         <ul>
-          <a>Novedades</a>
+          <a href="index.html">Novedades</a>
           <a href="cultura.html">Cultura</a>
           <a href="historia.html">Historia</a>
           <a href="deporte.html">Deporte</a>
-          <a href="turismo.html">Turismo</a>
+          <a>Turismo</a>
         </ul>
       </nav>
   </body>
