--- a/deporte.html
+++ b/deporte.html
@@ -9,10 +9,10 @@
       <h1>Avilés</h1>
       <nav>
         <ul>
-          <a>Novedades</a>
+          <a href="index.html">Novedades</a>
           <a href="cultura.html">Cultura</a>
           <a href="historia.html">Historia</a>
-          <a href="deporte.html">Deporte</a>
+          <a>Deporte</a>
           <a href="turismo.html">Turismo</a>
         </ul>
       </nav>
