Titulos de pagina tematica añadidos

--- a/cultura.html
+++ b/cultura.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link href="style.css">
     <title>Avilés</title>
-  </head>
-  <body>
-      <h1>Avilés</h1>
-      <nav>
+</head>
+
+<body>
+    <header>
+        <h1>Avilés</h1>
+    </header>
+    <nav>
         <ul>
-          <a href="index.html">Novedades</a>
-          <a>Cultura</a>
-          <a href="historia.html">Historia</a>
-          <a href="deporte.html">Deporte</a>
-          <a href="turismo.html">Turismo</a>
+            <a href="index.html">Novedades</a>
+            <a>Cultura</a>
+            <a href="historia.html">Historia</a>
+            <a href="deporte.html">Deporte</a>
+            <a href="turismo.html">Turismo</a>
         </ul>
-      </nav>
-  </body>
+    </nav>
+    <section>
+        <h2>Cultura</h2>
+    </section>
+</body>
+
 </html>
