--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <link href="style.css">
-    <title>Avilés</title>
-  </head>
-  <body>
-      <h1>Avilés</h1>
-      <nav>
-        <ul>
-          <a>Novedades</a>
-          <a href="cultura.html">Cultura</a>
-          <a href="historia.html">Historia</a>
-          <a href="deporte.html">Deporte</a>
-          <a href="turismo.html">Turismo</a>
-        </ul>
-      </nav>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link href="style.css">
+  <title>Avilés</title>
+</head>
+
+<body>
+  <header>
+    <h1>Avilés</h1>
+  </header>
+  <nav>
+    <ul>
+      <a>Novedades</a>
+      <a href="cultura.html">Cultura</a>
+      <a href="historia.html">Historia</a>
+      <a href="deporte.html">Deporte</a>
+      <a href="turismo.html">Turismo</a>
+    </ul>
+  </nav>
+  <section>
+    <h2>Novedades</h2>
+  </section>
+</body>
+
 </html>
