Logo del header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <header>
+    <img src="../img/1200px-Escudo_de_Avilés.jpg" alt="Escudo de Aviles">
     <h1>Avilés</h1>
   </header>
   <nav>
