--- a/cultura.html
+++ b/cultura.html
@@ -3,18 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <link  rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Avilés</title>
 </head>
 
 <body>
     <header>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
+            alt="Escudo de Aviles">
         <h1>Avilés</h1>
     </header>
     <nav>
         <ul>
             <a href="index.html">Novedades</a>
-            <a>Cultura</a>
+            <a class="seleccion">Cultura</a>
             <a href="historia.html">Historia</a>
             <a href="deporte.html">Deporte</a>
             <a href="turismo.html">Turismo</a>
