--- a/deporte.html
+++ b/deporte.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <link  rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Avilés</title>
 </head>
 
 <body>
     <header>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
+            alt="Escudo de Aviles">
         <h1>Avilés</h1>
     </header>
     <nav>
@@ -16,7 +18,7 @@
             <a href="index.html">Novedades</a>
             <a href="cultura.html">Cultura</a>
             <a href="historia.html">Historia</a>
-            <a>Deporte</a>
+            <a class="seleccion">Deporte</a>
             <a href="turismo.html">Turismo</a>
         </ul>
     </nav>
