--- a/cultura.html
+++ b/cultura.html
@@ -11,6 +11,7 @@
     <header>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
             alt="Escudo de Aviles">
+        <!-- Imagen realizada por el usuario SAnchoPanzaXXI de wikipedia bajo licencia CC BY-SA 4.0 -->
         <h1>Avilés</h1>
     </header>
     <nav>
