--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
       alt="Escudo de Aviles">
+    <!-- Imagen realizada por el usuario SAnchoPanzaXXI de wikipedia bajo licencia CC BY-SA 4.0 -->
     <h1>Avilés</h1>
   </header>
   <nav>
@@ -26,6 +27,10 @@
   <section>
     <h2>Novedades</h2>
   </section>
+
+  <footer>
+    <p>Página realizada por Enrique José Rodríguez Martín </p>
+  </footer>
 </body>
 
 </html>
