--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <header>
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
-      alt="Escudo de Aviles">
+      alt="Escudo de Aviles"/>
     <!-- Imagen realizada por el usuario SAnchoPanzaXXI de wikipedia bajo licencia CC BY-SA 4.0 -->
     <h1>Avilés</h1>
   </header>
   <nav>
     <ul>
-      <a class="seleccion">Novedades</a>
-      <a href="cultura.html">Cultura</a>
-      <a href="historia.html">Historia</a>
-      <a href="deporte.html">Deporte</a>
-      <a href="turismo.html">Turismo</a>
+      <li><a class="seleccion">Novedades</a></li>
+      <li></li><a href="cultura.html">Cultura</a>
+      <li></li><a href="historia.html">Historia</a>
+      <li></li><a href="deporte.html">Deporte</a>
+      <li></li><a href="turismo.html">Turismo</a>
     </ul>
   </nav>
   <section>
@@ -30,6 +30,8 @@
 
   <footer>
     <p>Página realizada por Enrique José Rodríguez Martín </p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
+    alt="Logotipo Copyleft"/>
   </footer>
 </body>
 
