--- a/turismo.html
+++ b/turismo.html
@@ -10,23 +10,29 @@
 <body>
     <header>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
-            alt="Escudo de Aviles">
+            alt="Escudo de Aviles" />
         <!-- Imagen realizada por el usuario SAnchoPanzaXXI de wikipedia bajo licencia CC BY-SA 4.0 -->
         <h1>Avilés</h1>
     </header>
     <nav>
         <ul>
-            <a href="index.html">Novedades</a>
-            <a href="cultura.html">Cultura</a>
-            <a href="historia.html">Historia</a>
-            <a href="deporte.html">Deporte</a>
-            <a class="seleccion">Turismo</a>
+            <li><a href="index.html">Novedades</a></li>
+            <li><a href="cultura.html">Cultura</a></li>
+            <li><a href="historia.html">Historia</a></li>
+            <li><a href="deporte.html">Deporte</a></li>
+            <li><a class="seleccion">Turismo</a></li>
         </ul>
     </nav>
 
     <section>
         <h2>Turismo</h2>
     </section>
+
+    <footer>
+        <p>Página realizada por Enrique José Rodríguez Martín </p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
+            alt="Logotipo Copyleft" />
+    </footer>
 </body>
 
 </html>
