Fix en index.html

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <nav>
     <ul>
       <li><a class="seleccion">Novedades</a></li>
-      <li></li><a href="cultura.html">Cultura</a>
-      <li></li><a href="historia.html">Historia</a>
-      <li></li><a href="deporte.html">Deporte</a>
-      <li></li><a href="turismo.html">Turismo</a>
+      <li><a href="cultura.html">Cultura</a></li>
+      <li><a href="historia.html">Historia</a></li>
+      <li><a href="deporte.html">Deporte</a></li>
+      <li><a href="turismo.html">Turismo</a></li>
     </ul>
   </nav>
   <section>
