--- a/cultura.html
+++ b/cultura.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Novedades</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a class="seleccion">Cultura</a></li>
             <li><a href="historia.html">Historia</a></li>
             <li><a href="deporte.html">Deporte</a></li>
@@ -24,7 +24,28 @@
         </ul>
     </nav>
     <section>
+        <!-- Datos extraidos de la página web www.turismoasturias.es -->
         <h2>Cultura</h2>
+        <p>La oferta cultural de Avilés es una de las más extensas y reconocidas no solo dentro del principado sino tambien en toda España.</p>
+        <section>
+            <h3>Museo de la Historia urbana de Avilés</h3>
+            <p>Espacio destinado a la exposición y divulgación de la historia y el patrimonio artístico y monumental de la villa milenaria de Avilés a través de cuatro grandes áreas: La villa Medieval, la Villa Moderna, la Ciudad Burguesa y la Ciudad Industrial.</p>
+            <p>Un museo para explicar la evolución de la ciudad de Avilés y su desarrollo a lo largo de los últimos siglos.</p>
+            <p>El contenido de la exposición se encuentra dividido en cuatro grandes áreas temáticas, distribuidas en las cuatro plantas del edificio, comenzando por los inicios desde el primer asentamiento, pasando por la historia medieval y por la etapa burguesa e industrial, y finalizando por la actualidad y el futuro de Avilés.</p>
+        </section>
+        <section>
+            <h3>Centro de Interpretación del Cementerio de la Carriona</h3>
+            <p>Dos itinerarios (Cementerio de La Carriona: "Espacio de arte" y "Lugar de memoria") permiten conocer un importante legado artístico y profundizar en el conocimiento del pasado de la ciudad mediante las personalidades allí enterradas.</p>
+            <p>Construido a finales del siglo XIX, este espacio expositivo acoge una buena muestra de las obras de prestigiosos artistas como Cipriano Folgueras, Manuel del Busto o Federico Ureña.</p>
+            <p>El recorrido se completa con varias vitrinas en las que se muestran facsimilares de proyectos de panteones y solicitudes de enterramientos de mediados del siglo XX, entre otros elementos.</p>
+        </section>
+        <section>
+            <h3>Centro Niemeyer</h3>
+            <p>Este gran conjunto arquitectónico en el entorno de la ría de Avilés, es la única obra del arquitecto brasileño Oscar Niemeyer en España. La música, el cine, el teatro, la danza, las exposiciones, la gastronomía o la palabra son los protagonistas de una programación cultural multidisciplinar y con un denominador común: la excelencia.</p>
+            <p>Un patio de butacas democrático, sin palcos. Tiene una capacidad para 980 butacas, todas con la misma visibilidad e idénticas condiciones acústicas.</p>
+            <p>El escenario destaca, además de por sus dimensiones, por su funcionalidad, ya que puede abrirse hacia la plaza, y ofrecer espectáculos hasta a 10.000 personas.</p>
+            <p>El vestíbulo también funciona como sala de exposiciones.</p>
+        </section>
     </section>
 
     <footer>
