--- a/turismo.html
+++ b/turismo.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Novedades</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="cultura.html">Cultura</a></li>
             <li><a href="historia.html">Historia</a></li>
             <li><a href="deporte.html">Deporte</a></li>
@@ -25,7 +25,18 @@
     </nav>
 
     <section>
-        <h2>Turismo</h2>
+        <h2>Visita la comarca de Avilés</h2>
+        <!-- datos extraidos de https://www.turismoasturias.es/descubre/donde-ir/comarcas/comarca-aviles -->
+        <p>Combina costa e interior y ostenta varios ‘récords': la última gran obra de Niemeyer, el casco histórico mejor conservado de Asturias, la primera piscina fluvial, los carnavales más famosos, uno de los quesos azules más sabrosos, y cuna de la única mina submarina de España.</p>
+        <section>
+            <h3>Datos sobre la comarca</h3>
+            <p>Central, con costa e interior. Con arte e industria. Con historia y presente. Con mucho ambiente. La Comarca Avilés tiene de todo: ambiente rural marcado por una dulce orografía que combina la llanura y las suaves montañas. Caserías y hórreos. Prados y ganado.</p>
+            <p>Sendas verdes, como la que lleva hasta el Pico Gorfolí, en Illas, donde también hay una de las pocas piscinas fluviales de Asturias, y fábricas de queso azul como el afamado La Peral, que ubica, gastronómicamente hablando, la comarca en el mundo.</p>
+            <p>También tiene ciudad y como no, con mucha historia. Un paseo por la ciudad de Avilés, la Villa medieval de Asturias, conocida popularmente como la Villa del Adelantado, nos transporta a un pasado de señoríos medievales como el del Marqués de Ferrera, o a los tiempos de la conquista de América donde tuvo gran protagonismo Pedro Menéndez de Avilés, que ha dado el sobrenombre a la ciudad.</p>
+            <p>El casco histórico de Avilés es el más grande y uno de los mejor conservados del norte de España, escenario perfecto para los carnavales más famosos de la región. Por si fuera poco, la saneada ría de Avilés es hoy un lugar más que idóneo para la práctica de deportes náuticos como la vela o el piragüismo y posee ya pantalanes deportivos y clubes, que navegan con el fondo de la arquitectura más vanguardista, la del Centro Niemeyer, la última gran obra del genio brasileño, que se ‘baña' a orillas de la ría avilesina y desde cuya Torre proporciona una impresionante vista panorámica de la ciudad.</p>
+            <p>Las playas las aporta Castrillón, donde se ubica el arenal más grande de Asturias, el playón de Bayas, que es el que siempre se ve desde los aviones que aterrizan y despegan del Aeropuerto de Asturias, localizado en este concejo. Definitivamente Castrillón es tierra de otros grandes arenales como San Juan de Nieva o la playa de Salinas, colofón costero de uno de los más antiguos y señoriales lugares de veraneo de Asturias, que cuenta con un curioso museo de Anclas al aire libre.</p>
+            <p>Una comarca bien comunicada, muy céntrica, ideal para la doble faceta de vida urbana y rural, para el deporte y para el relax, para la buena cocina y la fiesta, para navegar y para tener los pies en la tierra. Así es la Comarca Avilés.</p>
+        </section>
     </section>
 
     <footer>
