--- a/deporte.html
+++ b/deporte.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Novedades</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="cultura.html">Cultura</a></li>
             <li><a href="historia.html">Historia</a></li>
             <li><a class="seleccion">Deporte</a></li>
@@ -26,6 +26,26 @@
 
     <section>
         <h2>Deporte</h2>
+        <p>Avilés es una reconocida ciudad por su implicación con el deporte profesional y de base.</p>
+        <section>
+            <!-- datos extraidos de https://es.wikipedia.org/wiki/Real_Avil%C3%A9s_Club_de_F%C3%BAtbol -->
+            <h3>Real Avilés</h3>
+            <p>El Real Avilés Club de Fútbol es un club de fútbol español de la ciudad de Avilés (Asturias, España). Fue fundado en 1903 y es el club de fútbol más antiguo de Asturias, y el octavo de España. En la actualidad compite en la Tercera División de España. El club ejerce de local en el estadio Román Suárez Puerta, que dispone de aproximadamente 5.400 localidades de asiento, inaugurado el 26 de septiembre de 1943 y posteriormente remodelado en 1999.</p>
+            <p>Sus mejores resultados en liga fueron una tercera posición en la Segunda División de España en la temporada 1952/53, que le dio derecho a disputar la promoción de ascenso a Primera División. En Copa del Rey llegó a los dieciseisavos de final en 1991/92. También ha logrado el Campeonato de España de Segunda Categoría en 1920, el Campeonato de España Amateur en 1940 y la Copa Real Federación Española de Fútbol en 2003.</p>
+        </section>
+        <section>
+            <!-- datos extraidos de https://es.wikipedia.org/wiki/Club_de_Mar_de_Avil%C3%A9s -->
+            <h3>Club de mar de Aviles</h3>
+            <p>El Club de Mar de Avilés es un club náutico de Avilés (Asturias, España). Su especialidad deportiva es el remo, al que se sumó el piragüismo en 1964, pero también ha tenido secciones de vela, motonáutica y natación.</p>
+            <p>El viernes 22 de septiembre de 1944 se reunió en el "Café Colón" un grupo de personas para tratar de organizar unas regatas de remo, y, al dia siguiente, se volvieron a reunir en el "Bar Germán", aprobando la constitución del Club de Mar Avilesino. Ese mismo año, los días 21 y 22 de octubre, acuden a Madrid a competir, en el Estanque Grande del Buen Retiro, en el I Campeonato de España de Bateles. En 1946 quedaron terceros, y en 1961 se alzaron con el triunfo. En ese mismo año, en 1961, se clasificaron terceros en el Campeonato de España de Trainerillas.</p>
+            <p>Sus instalaciones pasaron de estar en la playa de San Balandrán inicialmente, a la de San Juan, posteriormente.</p>
+        </section>
+        <section>
+            <!-- datos extraidos de https://es.wikipedia.org/wiki/Asociaci%C3%B3n_Atl%C3%A9tica_Avilesina -->
+            <h3>Asociación Atlética Avilesina</h3>
+            <p>La Asociación Atlética Avilesina (A.A.A.), es una sociedad polideportiva sin ánimo de lucro, con fines deportivos, situada en Avilés (Asturias, España). Cuenta con 4 secciones deportivas, Piragüismo, Atletismo, Baloncesto y Balonmano. Es una de las entidades deportivas más antiguas del Principado, y un referente deportivo a nivel Nacional. En el año 2007 celebró su 75 aniversario, siendo nombrados Presidentes de Honor Sus Altezas Reales los Príncipes de Asturias Don Felipe de Borbón y Grecia y Doña Letizia Ortiz Rocasolano.</p>
+            <p>La A.A.A., fue fundada en septiembre del año 1932 en un banco del Parque del Muelle, por catorce jóvenes avilesinos entusiastas del deporte, teniendo como base el atletismo, pero sin descartar a ningún otro deporte especialmente de tipo aficionado. En la sesión constitutiva fueron utilizados 3 bancos del parque, cuatro ocupantes por banco, y los dos “más chavales”, de pie. Medio Siglo después, el Ayuntamiento de Avilés, donó para el Domicilio Social de la Sociedad Deportiva, como recuerdo permanente, uno de los bancos existentes en el parque. Por aquella época, el grupo de deportistas fundadores, eran considerados como una especie de “jóvenes bárbaros”. Los fundadores fueron: Julián Lorda Arbesú, José Aguirre Martínez, José Tamargo Miranda, Carlos Suárez "Salinas", Ismael Espolita García, Policarpo Riego Cuervo, José Ramón Cuervo, Leopoldo Lorda Arbesú, Eduardo Díaz Pérez, Cayetano Prada Aranda, Ramón Granda Alonso, Ángel Rodríguez "Draga", Abelardo Glez. Mígueles, Edmundo "Riolín". Las siglas son tres aes (AAA), Asociación Atlética Avilesina, de las que se sacan otros significados, en honor a sus deportistas que son A de Adelantados, A de Audaces, A de Admirables; y también, en honor a la ciudad a la que representa: Avilés, Ahora, Arriba.</p>
+        </section>
     </section>
 
     <footer>
