--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   <nav>
     <ul>
-      <li><a class="seleccion">Novedades</a></li>
+      <li><a class="seleccion">Inicio</a></li>
       <li><a href="cultura.html">Cultura</a></li>
       <li><a href="historia.html">Historia</a></li>
       <li><a href="deporte.html">Deporte</a></li>
@@ -25,7 +25,14 @@
     </ul>
   </nav>
   <section>
-    <h2>Novedades</h2>
+    <h2>Avilés, la joya industrial del norte de Asturias</h2>
+    <!-- Datos extraidos de https://es.wikipedia.org/wiki/Avil%C3%A9s -->
+    <section>
+      <p>Avilés es una ciudad y un concejo español situado en el Principado de Asturias, en el norte de la península ibérica, a ambas márgenes de la ría de Avilés. En 2018, el municipio contaba con una población empadronada de 78.715 habitantes, siendo la tercera capital municipal en población de Asturias, en número de habitantes. El concejo es uno de los veinte municipios agrupados que forman el área metropolitana central de Asturias.</p>
+      <p>Existen pruebas de asentamientos humanos desde la prehistoria, aunque es destacable que en la ciudad no se originó una población permanente hasta después de la época romana. En el siglo X con la obtención del fuero a manos del rey Alfonso VI, la urbe consigue una serie de privilegios al serle designado el realengo, entre los que está el poder celebrar ferias y un mercado semanal. Durante la Edad Moderna se vivió un momento de esplendor con la llegada de numerosa nobleza que buscaba construir sus solares en la villa y el auge de la burguesía, pero a partir de entonces se inició un largo período de decadencia que únicamente sería salvado con el comercio de bienes con América y la posterior llegada del ferrocarril además de su intensiva industrialización, eminentemente siderúrgica, a mediados del siglo XX.</p>
+      <p>Conserva en su caso antiguo un conjunto histórico artístico compuesto por varios palacios, casas nobles, iglesias, plazas, calles y grandes parques, junto con un patrimonio cultural en el que destacan especialmente el Museo de la Historia Urbana y el Centro Niemeyer.​ De los diversos acontecimientos que cada año se celebran en la ciudad son dignos de mención su Antroxu, la Fiesta del Bollo o el Festival Intercéltico de Avilés.</p>
+      <p>Se encuentra a solo 25 km de Gijón, a 27 km de la capital, Oviedo y está comunicada a través de una amplia red de autovías, ferrocarril y autobús siendo además uno de los principales puertos pesqueros y de mercancías de España.</p>
+    </section>
   </section>
 
   <footer>
