--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Avilés</title>
+  <script src="slideshow.js"></script>
 </head>
 
 <body>
@@ -24,6 +25,13 @@
       <li><a href="turismo.html">Turismo</a></li>
     </ul>
   </nav>
+  <div class="slideshow">
+    <!-- http://www.niemeyercenter.org/noticias/1717/el-centro-niemeyer-logra-la-primera-posicin-entre-las-instituciones-culturales-mejor-valoradas-de-asturias.html -->
+    <img src="http://www.niemeyercenter.org/uploads/fotos/nC8e8uLN3a5hALg5pRXCxYDQ3qAzuxVB.jpg" alt="Centro Niemeyer">
+    <!-- http://www.avilesclubempresas.es/casco_historico.php?Idioma=ES -->
+    <img scr="http://www.avilesclubempresas.es/aviles_Galiana7136.jpg" atl="Calle Galiana">
+    <img scr="http://www.avilesclubempresas.es/aviles_PlazaEspana616.jpg" atl="Plaza de España">
+  </div>
   <section>
     <h2>Avilés, la joya industrial del norte de Asturias</h2>
     <!-- Datos extraidos de https://es.wikipedia.org/wiki/Avil%C3%A9s -->
