Tabla personajes ilustres.

--- a/historia.html
+++ b/historia.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Avilés</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="personajes.js"></script>
 </head>
 
 <body>
@@ -40,6 +42,20 @@
             <h3>Edad contemporánea</h3>
             <p>El complejo industrial de Avilés se consolidó en los años cincuenta con la instalación en ambas márgenes de la ría homónima de grandes plantas productivas, como la siderúrgica de Ensidesa (1951), que más tarde se llamaría CSI, Aceralia y hoy en día ArcelorMittal, o las pertenecientes a Cristalería Española (1952), a la Empresa Nacional de Aluminio (1958), posteriormente llamada Inespal y más tarde Alcoa, a Asturiana de Zinc (1959), o a la reconvertida Real Compañía Asturiana de Minas, en Arnao, absorbida con el tiempo por la anterior y ambas asentadas en Castrillón. A éstas se le añadieron muy pocas más hasta los últimos años de los ochenta, período en el que, a la crisis de las grandes plantas productivas, le sucedió una notable diversificación del sector industrial, aunque no tan amplia como era de esperar.</p>
             <p>El futuro de Avilés está ligado a un proyecto de regeneración en la zona de la ría llamado "Nueva Centralidad". En diciembre de 2008, el Principado de Asturias, la sociedad estatal INFOINVEST, el Ayuntamiento de Avilés y el Puerto de Avilés constituyen la sociedad "Avilés, Isla de la Innovación" con el fin de desarrollar urbanísticamente una extensa área de 575.000 metros cuadrados situados en ambas márgenes de la ria de Avilés, originariamente denominada Nueva Centralidad y actualmente conocida como Isla de la Innovación.</p>
+        </section>
+        <section>
+            <h3>Personajes Ilustres de la villa</h3>
+            <table>
+                <tbody class="personajes">
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Ocupación</th>
+                            <th>Cronología</th>
+                        </tr>
+                    </thead>
+                </tbody>
+            </table>
         </section>
     </section>
 
