Conexion establecida con API meteorologica.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Avilés</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="slideshow.js"></script>
+  <script src="meteo.js"></script>
 </head>
 
 <body>
