--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <p>Conserva en su caso antiguo un conjunto histórico artístico compuesto por varios palacios, casas nobles, iglesias, plazas, calles y grandes parques, junto con un patrimonio cultural en el que destacan especialmente el Museo de la Historia Urbana y el Centro Niemeyer.​ De los diversos acontecimientos que cada año se celebran en la ciudad son dignos de mención su Antroxu, la Fiesta del Bollo o el Festival Intercéltico de Avilés.</p>
       <p>Se encuentra a solo 25 km de Gijón, a 27 km de la capital, Oviedo y está comunicada a través de una amplia red de autovías, ferrocarril y autobús siendo además uno de los principales puertos pesqueros y de mercancías de España.</p>
   </section>
-  <section>
-    <h3>Predicción meteorilógica en Avilés</h3>
+  <section class="meteo">
+    <h3>Predicción meteorilógica en Avilés para hoy</h3>
   </section>
   <footer>
     <p>Página realizada por Enrique José Rodríguez Martín </p>
