--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <p>Se encuentra a solo 25 km de Gijón, a 27 km de la capital, Oviedo y está comunicada a través de una amplia red de autovías, ferrocarril y autobús siendo además uno de los principales puertos pesqueros y de mercancías de España.</p>
   </section>
   <section class="meteo">
-    <h3>Predicción meteorilógica en Avilés para hoy</h3>
+    <h3>Predicción meteorológica en Avilés para hoy</h3>
+    <!-- iconos gracias a https://www.iconfinder.com/hosseinian -->
   </section>
   <footer>
     <p>Página realizada por Enrique José Rodríguez Martín </p>
