--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     <h3>Predicción meteorológica en Avilés para hoy</h3>
     <!-- iconos gracias a https://www.iconfinder.com/hosseinian -->
   </section>
+  <section>
+    <img src="poblacion.svg" alt="Grafica poblacion aviles.">    
+  </section>
   <footer>
     <p>Página realizada por Enrique José Rodríguez Martín </p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
