intento arreglo svg

--- a/historia.html
+++ b/historia.html
@@ -7,6 +7,7 @@
     <title>Avilés</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="personajes.js"></script>
+    <script src="poblacion.js"></script>
 </head>
 
 <body>
@@ -58,7 +59,10 @@
             </table>
         </section>
     </section>
-
+    <section>
+        <h3>Evolución de la poblacion de Avilés</h3>
+        <img src="poblacion.svg" alt="Gráfica poblacion Aviles.">
+    </section>
     <footer>
         <p>Página realizada por Enrique José Rodríguez Martín </p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
