El maravilloso svg no funcionando.

--- a/historia.html
+++ b/historia.html
@@ -61,7 +61,7 @@
     </section>
     <section>
         <h3>Evolución de la poblacion de Avilés</h3>
-        <img src="poblacion.svg" alt="Gráfica poblacion Aviles.">
+        <img src="poblacion.svg" alt="Grafica evolución poblacion.">
     </section>
     <footer>
         <p>Página realizada por Enrique José Rodríguez Martín </p>
