--- a/historia.html
+++ b/historia.html
@@ -63,28 +63,56 @@
         <h3>Evolución de la poblacion de Avilés</h3>
         <svg height="600" width="700">
             <polyline points="50,459.7 100,440.8 200,430.6 300,420.1 400,390.1 500,100.8998 550,90 600,100 700,100 700,459.7"
-                      style="fill:blue;stroke:brack;stroke-width:4"/>
+                      style="fill:rgb(0, 61, 165);stroke:brack;stroke-width:4"/>
             <text x="100"
                   y="500"
-                  style="writing-mode: tb; glyph-orientation-horizontal: 0;">1860</text>
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">1860</text>
+            <line x1="117" y1="470" x2="117" y2="430" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <text x="100"
+                  y="425"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">7414</text>
             <text x="200"
                   y="500"
-                  style="writing-mode: tb; glyph-orientation-vertical: 0;">1890</text>
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">1890</text>
+            <line x1="217" y1="470" x2="217" y2="420" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <text x="195"
+                  y="415"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">11000</text>
             <text x="300"
                   y="500"
-                  style="writing-mode: tb; glyph-orientation-vertical: 0;">1920</text>
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">1920</text>
+            <line x1="317" y1="470" x2="317" y2="400" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <text x="295"
+                  y="395"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">14642</text>
             <text x="400"
                   y="500"
-                  style="writing-mode: tb; glyph-orientation-vertical: 0;">1950</text>
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">1950</text>
+            <line x1="417" y1="470" x2="417" y2="300" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <text x="395"
+                  y="295"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">21270</text>
             <text x="500"
                   y="500"
-                  style="writing-mode: tb; glyph-orientation-vertical: 0;">1970</text>
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">1970</text>
+            <line x1="517" y1="470" x2="517" y2="90" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <text x="495"
+                  y="85"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">81710</text>
             <text x="600"
                   y="500"
-                  style="writing-mode: tb; glyph-orientation-vertical: 0;">2000</text>
-             <text x="650"
-                   y="500"
-                   style="writing-mode: tb; glyph-orientation-vertical: 0;">2010</text>
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">2000</text>
+            <line x1="617" y1="470" x2="617" y2="90" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <text x="595"
+                  y="85"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">83185</text>
+            <text x="660"
+                  y="500"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">2010</text>
+            <line x1="677" y1="470" x2="677" y2="90" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <text x="655"
+                  y="85"
+                  style="writing-mode: sideways-lr; glyph-orientation-vertical: 0;">84202</text>
          </svg>
     </section>
     <footer>
