Sectores economicos SVG.

--- a/historia.html
+++ b/historia.html
@@ -115,6 +115,24 @@
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">84202</text>
          </svg>
     </section>
+    <section>
+        <h3>División sectores económicos Avilés 2019</h3>
+        <svg width='100%' height='55px'>
+            <g>
+              <rect fill='red' width='100%' height='45'></rect>
+              <rect fill='blue' width='94.7%' height='45'></rect>
+              <rect fill='green' width='82.6%' height='45'></rect>
+              <rect fill='yellow' width='61%' height='45'></rect>
+            </g>
+        </svg>
+        <p>Leyenda:</p>
+        <ul>
+            <li>Servicios 61% (Amarillo)</li>
+            <li>Comercio 22% (Verde)</li>
+            <li>Construcción 12% (Azul)</li>
+            <li>Industria 5% (Rojo)</li>
+        </ul>
+    </section>
     <footer>
         <p>Página realizada por Enrique José Rodríguez Martín </p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
