Colores svg pulidos.

--- a/historia.html
+++ b/historia.html
@@ -63,7 +63,7 @@
         <h3>Evolución de la poblacion de Avilés</h3>
         <svg height="600" width="700">
             <polyline points="50,459.7 100,440.8 200,430.6 300,420.1 400,390.1 500,100.8998 550,90 600,100 700,100 700,459.7"
-                      style="fill:rgb(0, 61, 165);stroke:brack;stroke-width:4"/>
+                      style="fill:#0066ff;stroke:brack;stroke-width:4"/>
             <text x="100"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">1860</text>
@@ -119,10 +119,10 @@
         <h3>División sectores económicos Avilés 2019</h3>
         <svg width='100%' height='55px'>
             <g>
-              <rect fill='red' width='100%' height='45'></rect>
-              <rect fill='blue' width='94.7%' height='45'></rect>
-              <rect fill='green' width='82.6%' height='45'></rect>
-              <rect fill='yellow' width='61%' height='45'></rect>
+              <rect fill='#ff1a1a' width='100%' height='45'></rect>
+              <rect fill='#0066ff' width='94.7%' height='45'></rect>
+              <rect fill='#66ff33' width='82.6%' height='45'></rect>
+              <rect fill='#ffff1a' width='61%' height='45'></rect>
             </g>
         </svg>
         <p>Leyenda:</p>
