--- a/historia.html
+++ b/historia.html
@@ -59,57 +59,58 @@
             </table>
         </section>
     </section>
+    <!-- La paleta de colores elegida sigue el estandard IBM para usbilidad daltonismo https://www.ibm.com/design/language/elements/color/#blue-core -->
     <section>
         <h3>Evolución de la poblacion de Avilés</h3>
         <svg height="600" width="700">
             <polyline points="50,459.7 100,440.8 200,430.6 300,420.1 400,390.1 500,100.8998 550,90 600,80 700,70 700,459.7"
-                      style="fill:#0066ff;stroke:brack;stroke-width:4"/>
+                      style="fill:#6ea6ff;stroke:brack;stroke-width:4"/>
             <text x="100"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">1860</text>
-            <line x1="117" y1="470" x2="117" y2="430" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <line x1="117" y1="470" x2="117" y2="430" style="stroke:#051243;stroke-width:2" />
             <text x="100"
                   y="425"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">7414</text>
             <text x="200"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">1890</text>
-            <line x1="217" y1="470" x2="217" y2="420" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <line x1="217" y1="470" x2="217" y2="420" style="stroke:#051243;stroke-width:2" />
             <text x="195"
                   y="415"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">11000</text>
             <text x="300"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">1920</text>
-            <line x1="317" y1="470" x2="317" y2="400" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <line x1="317" y1="470" x2="317" y2="400" style="stroke:#051243;stroke-width:2" />
             <text x="295"
                   y="395"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">14642</text>
             <text x="400"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">1950</text>
-            <line x1="417" y1="470" x2="417" y2="300" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <line x1="417" y1="470" x2="417" y2="300" style="stroke:#051243;stroke-width:2" />
             <text x="393"
                   y="295"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">21270</text>
             <text x="500"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">1970</text>
-            <line x1="517" y1="470" x2="517" y2="90" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <line x1="517" y1="470" x2="517" y2="90" style="stroke:#051243;stroke-width:2" />
             <text x="495"
                   y="85"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">81710</text>
             <text x="600"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">2000</text>
-            <line x1="617" y1="470" x2="617" y2="70" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <line x1="617" y1="470" x2="617" y2="70" style="stroke:#051243;stroke-width:2" />
             <text x="595"
                   y="65"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">83185</text>
             <text x="660"
                   y="500"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">2010</text>
-            <line x1="677" y1="470" x2="677" y2="65" style="stroke:rgb(255,0,0);stroke-width:2" />
+            <line x1="677" y1="470" x2="677" y2="65" style="stroke:#051243;stroke-width:2" />
             <text x="655"
                   y="60"
                   style="writing-mode: lr; glyph-orientation-vertical: 0;">84202</text>
@@ -119,18 +120,18 @@
         <h3>División sectores económicos Avilés 2019</h3>
         <svg width='100%' height='55px'>
             <g>
-              <rect fill='#ff1a1a' width='100%' height='45'></rect>
-              <rect fill='#0066ff' width='94.7%' height='45'></rect>
-              <rect fill='#66ff33' width='82.6%' height='45'></rect>
-              <rect fill='#ffff1a' width='61%' height='45'></rect>
+              <rect fill='#051243' width='100%' height='45'></rect>
+              <rect fill='#0530ad' width='94.7%' height='45'></rect>
+              <rect fill='#0062ff' width='82.6%' height='45'></rect>
+              <rect fill='#6ea6ff' width='61%' height='45'></rect>
             </g>
         </svg>
-        <p>Leyenda:</p>
+        <p>Leyenda de izquierda a derecha:</p>
         <ul>
-            <li>Servicios 61% (Amarillo)</li>
-            <li>Comercio 22% (Verde)</li>
-            <li>Construcción 12% (Azul)</li>
-            <li>Industria 5% (Rojo)</li>
+            <li>Servicios 61% (1),</li>
+            <li>Comercio 22% (2),</li>
+            <li>Construcción 12% (3),</li>
+            <li>Industria 5% (4).</li>
         </ul>
     </section>
     <footer>
